# llm-quant-main

./: .env  .gitignore  CustomPandasData.py  agent.py  chatGPT.py  factors.json  main.py  params.json  pyproject.toml  run.py  strategy.py  strategy_vs_benchmark.html  template.py  test.py  trade_log.json
backup/: factors.json  factors_2024-12-16_21-32-24.json
