[tool.poetry]
name = "llm-quant"
version = "0.1.0"
description = ""
authors = ["Haohanblue <haohanblue@foxmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
backtrader = "^1.9.78.123"
pymysql = "^1.1.1"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
sqlalchemy = "^2.0.36"
tushare = "^1.4.13"
pyecharts = "^2.0.7"
python-dotenv = "^1.0.1"
openai = "^1.57.4"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

